--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,4 +6,6 @@ export(itrax_import)
 export(itrax_join)
 export(itrax_meta)
 export(itrax_ordination)
+export(itrax_restspectra)
+export(itrax_section)
 export(itrax_spectracompare)
