--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,10 +2,13 @@
 
 export(itrax_averaging)
 export(itrax_correlation)
+export(itrax_image)
 export(itrax_import)
 export(itrax_join)
 export(itrax_meta)
+export(itrax_munsell)
 export(itrax_ordination)
+export(itrax_radiograph)
 export(itrax_restspectra)
 export(itrax_section)
 export(itrax_spectracompare)
