--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,3 +9,19 @@ export(itrax_meta)
 export(itrax_ordination)
 export(itrax_radiograph)
 export(itrax_section)
+import(PeriodicTable)
+import(dplyr)
+import(ggplot2)
+import(grid)
+importFrom(grDevices,dev.new)
+importFrom(graphics,barplot)
+importFrom(stats,aggregate)
+importFrom(stats,biplot)
+importFrom(stats,cor)
+importFrom(stats,cutree)
+importFrom(stats,dist)
+importFrom(stats,hclust)
+importFrom(stats,na.omit)
+importFrom(stats,prcomp)
+importFrom(utils,data)
+importFrom(utils,read.table)
