--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,12 +9,12 @@ export(itrax_meta)
 export(itrax_ordination)
 export(itrax_radiograph)
 export(itrax_section)
-import(PeriodicTable)
 import(dplyr)
 import(ggplot2)
 import(grid)
 importFrom(grDevices,dev.new)
 importFrom(graphics,barplot)
+importFrom(rlang,.data)
 importFrom(stats,aggregate)
 importFrom(stats,biplot)
 importFrom(stats,cor)
