--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(itrax_join)
 export(itrax_meta)
 export(itrax_ordination)
 export(itrax_radiograph)
+export(itrax_reduce)
 export(itrax_section)
 import(dplyr)
 import(ggplot2)
