--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,16 +13,15 @@ export(itrax_section)
 import(dplyr)
 import(ggplot2)
 import(grid)
-importFrom(grDevices,dev.new)
-importFrom(graphics,barplot)
+importFrom(compositions,clr)
 importFrom(rlang,.data)
 importFrom(stats,aggregate)
-importFrom(stats,biplot)
 importFrom(stats,cor)
 importFrom(stats,cutree)
 importFrom(stats,dist)
 importFrom(stats,hclust)
 importFrom(stats,na.omit)
 importFrom(stats,prcomp)
+importFrom(tidyr,drop_na)
 importFrom(utils,data)
 importFrom(utils,read.table)
