--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,8 +11,10 @@ export(itrax_radiograph)
 export(itrax_reduce)
 export(itrax_section)
 import(dplyr)
+import(ggfortify)
 import(ggplot2)
 import(grid)
+importFrom(broom,augment)
 importFrom(compositions,clr)
 importFrom(rlang,.data)
 importFrom(stats,aggregate)
