Refactor to use internal function
The process of preparing data for multivariate methods (itrax_correlation(), itrax_ordination(), itrax_section()) is moved to an internal function.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,8 @@ import(ggplot2)
 import(grid)
 importFrom(broom,augment)
 importFrom(compositions,clr)
+importFrom(ggcorrplot,cor_pmat)
+importFrom(ggcorrplot,ggcorrplot)
 importFrom(rlang,.data)
 importFrom(stats,aggregate)
 importFrom(stats,cor)
