fix multivariate methods
corrections to passing parameters to the internal function, and no doesn't include the id's as a variable in the multivariate methods

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: itraxR
 Type: Package
 Title: Itrax Data Analysis Tools
-Version: 1.1
+Version: 1.2
 Author: Thomas Bishop
 Maintainer: Thomas Bishop <tombishopemail@gmail.com>
 URL: https://thomasbishop.uk
@@ -31,4 +31,5 @@ Imports:
     rlang,
     compositions,
     tidyr,
-    broom
+    broom,
+    tibble
