--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ importFrom(stats,dist)
 importFrom(stats,hclust)
 importFrom(stats,na.omit)
 importFrom(stats,prcomp)
+importFrom(tibble,column_to_rownames)
 importFrom(tidyr,drop_na)
 importFrom(utils,data)
 importFrom(utils,read.table)
