--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,11 +8,13 @@ export(itrax_meta)
 export(itrax_ordination)
 export(itrax_radiograph)
 export(itrax_reduce)
+export(itrax_restspectra)
 export(itrax_section)
 import(dplyr)
 import(ggfortify)
 import(ggplot2)
 import(grid)
+import(readr)
 importFrom(broom,augment)
 importFrom(compositions,clr)
 importFrom(ggcorrplot,cor_pmat)
