Various build fixes
There were some build fixes that came up because the dependencies are a bit of a mess (and probably need a full audit).

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,15 +14,15 @@ Description: Parse, trim, join, visualise and analyse data from Itrax sediment c
     Multivariate methods are implemented with appropriate data transformation. 
 License: GPL-3
 Encoding: UTF-8
-RoxygenNote: 7.1.1
+RoxygenNote: 7.1.2
 LazyData: true
 Depends: 
     dplyr,
     ggplot2,
     ggfortify,
-    grid,
     R (>= 3.5.0),
-    compositions
+    compositions,
+    grid
 Imports:
     readr,
     tiff,
