--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,28 +12,31 @@ export(itrax_reduce)
 export(itrax_restspectra)
 export(itrax_section)
 export(itrax_spectra)
+import(compositions)
 import(dplyr)
 import(ggfortify)
 import(ggplot2)
-import(grid)
 import(readr)
 importFrom(broom,augment)
 importFrom(compositions,clr)
+importFrom(compositions,cor)
 importFrom(ggcorrplot,cor_pmat)
 importFrom(ggcorrplot,ggcorrplot)
+importFrom(grid,rasterGrob)
+importFrom(janitor,remove_empty)
 importFrom(readr,read_delim)
+importFrom(readr,read_tsv)
 importFrom(rlang,.data)
-importFrom(stats,cor)
+importFrom(stats,biplot)
 importFrom(stats,cutree)
-importFrom(stats,dist)
 importFrom(stats,hclust)
 importFrom(stats,na.omit)
-importFrom(stats,prcomp)
 importFrom(stringr,str_split)
 importFrom(stringr,str_subset)
 importFrom(stringr,str_trim)
 importFrom(stringr,str_which)
-importFrom(tibble,column_to_rownames)
+importFrom(tibble,rownames_to_column)
 importFrom(tidyr,drop_na)
+importFrom(tiff,readTIFF)
 importFrom(utils,data)
 importFrom(utils,read.table)
