--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(itrax_image)
 export(itrax_import)
 export(itrax_join)
 export(itrax_meta)
+export(itrax_munsell)
 export(itrax_ordination)
 export(itrax_qspecsettings)
 export(itrax_radiograph)
@@ -14,7 +15,6 @@ export(itrax_section)
 export(itrax_spectra)
 import(compositions)
 import(dplyr)
-import(ggfortify)
 import(ggplot2)
 import(readr)
 importFrom(broom,augment)
@@ -24,6 +24,8 @@ importFrom(ggcorrplot,cor_pmat)
 importFrom(ggcorrplot,ggcorrplot)
 importFrom(grid,rasterGrob)
 importFrom(janitor,remove_empty)
+importFrom(munsellinterpol,ColorBlockFromMunsell)
+importFrom(munsellinterpol,RGBtoMunsell)
 importFrom(readr,read_delim)
 importFrom(readr,read_tsv)
 importFrom(rlang,.data)
