--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -20,7 +20,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: r-lib/actions/setup-r@v1
-        with: 
+        with:
           r-version: 'devel'
       - name: Install dependencies
         run: |
@@ -30,5 +30,5 @@ jobs:
       - name: Check
         run: |
           options(crayon.enabled = TRUE)
-          rcmdcheck::rcmdcheck(args = "--as-cran", "--no-manual", error_on = "note")
+          rcmdcheck::rcmdcheck(args = c("--as-cran", "--no-manual"), error_on = "note")
         shell: Rscript {0}
