--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: itraxR
 Type: Package
 Title: Itrax Data Analysis Tools
-Version: 1.9
-Date: 2022-11-07
+Version: 1.10
+Date: 2022-12-31
 Author: Thomas Bishop
 Maintainer: Thomas Bishop <tombishopemail@gmail.com>
 URL: https://github.com/tombishop1/itraxR/
@@ -32,6 +32,7 @@ Imports:
     broom,
     tibble,
     stringr,
-    munsellinterpol
+    munsellinterpol,
+    utils
 Suggests:
     magrittr
