--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(itrax_reduce)
 export(itrax_restspectra)
 export(itrax_section)
 export(itrax_spectra)
+export(itrax_sumspectra)
 import(compositions)
 import(dplyr)
 import(ggplot2)
@@ -26,19 +27,23 @@ importFrom(grid,rasterGrob)
 importFrom(janitor,remove_empty)
 importFrom(munsellinterpol,ColorBlockFromMunsell)
 importFrom(munsellinterpol,RGBtoMunsell)
+importFrom(plyr,join_all)
 importFrom(readr,read_delim)
 importFrom(readr,read_tsv)
+importFrom(readr,write_file)
 importFrom(rlang,.data)
 importFrom(stats,biplot)
 importFrom(stats,cutree)
 importFrom(stats,hclust)
 importFrom(stats,na.omit)
 importFrom(stringr,str_split)
+importFrom(stringr,str_split_i)
 importFrom(stringr,str_subset)
 importFrom(stringr,str_trim)
 importFrom(stringr,str_which)
 importFrom(tibble,rownames_to_column)
 importFrom(tidyr,drop_na)
+importFrom(tidyselect,starts_with)
 importFrom(tiff,readTIFF)
 importFrom(utils,data)
 importFrom(utils,read.table)
